--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -15,6 +15,8 @@
   },
   "preloads": [
     "./start/routes/admin.routes.ts",
+    "./start/routes/candidate.routes.ts",
+    "./start/routes/session.routes.ts",
     "./start/kernel"
   ],
   "providers": [
